force-app/main/default/objects/Journey_Plan__c/Journey_Plan__c.object-meta.xml
<CustomObject>
    <label>Journey Plan</label>
    <pluralLabel>Journey Plans</pluralLabel>
    <nameField>
        <label>Journey Plan Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Permanent Journey Plan for salesperson route scheduling and visit planning (MOD-02 Beat Plan and Route Management)</description>
</CustomObject>