force-app/main/default/objects/Journey_Plan__c/fields/Exclude_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Holidays__c</fullName>
    <label>Exclude Holidays</label>
    <description>When checked, holidays applicable to the employee's territory/region are excluded from plan day generation.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>