force-app/main/default/objects/Journey_Plan__c/fields/Exclude_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Leaves__c</fullName>
    <label>Exclude Leaves</label>
    <description>When checked, approved/pending leave dates for the salesperson are excluded from plan day generation.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>