force-app/main/default/objects/Journey_Plan__c/fields/Exclude_Week_Offs__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Week_Offs__c</fullName>
    <label>Exclude Week Offs</label>
    <description>When checked, the employee's configured week-off days are excluded from plan day generation.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>