force-app/main/default/objects/Journey_Plan__c/fields/Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date__c</fullName>
    <label>Plan Date</label>
    <type>Date</type>
</CustomField>