force-app/main/default/objects/Journey_Plan__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Journey Plans</relationshipLabel>
    <relationshipName>Journey_Plans</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>