force-app/main/default/objects/Journey_Plan__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Journey Plans</relationshipLabel>
    <relationshipName>Journey_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>