force-app/main/default/objects/Journey_Plan__c/fields/Total_Planned_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Days__c</fullName>
    <label>Total Planned Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>