force-app/main/default/objects/Journey_Plan__c/fields/Total_Planned_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Visits__c</fullName>
    <label>Total Planned Visits</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>