force-app/main/default/objects/Journey_Plan__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED: Use Salesperson__c instead. This field is kept for backward compatibility and is auto-synced from Salesperson__c by the Journey Plan trigger.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Journey Plans</relationshipLabel>
    <relationshipName>Journey_Plans_User</relationshipName>
    <type>Lookup</type>
</CustomField>