force-app/main/default/objects/Journey_Plan__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Text</type>
    <length>4</length>
</CustomField>