force-app/main/default/objects/Journey_Plan__c/listViews/All_Journey_Plans.listView-meta.xml
<ListView>
    <fullName>All_Journey_Plans</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Planned_Visits__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Journey Plans</label>
</ListView>